--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node node_modules/reactuate/webpack-dev-server.js",
+    "build": "NODE_ENV=production webpack --config node_modules/reactuate/default-webpack-config.js --progress --colors"
   },
   "repository": {
     "type": "git",
@@ -15,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/okmttdhr/aupa/issues"
   },
-  "homepage": "https://github.com/okmttdhr/aupa#readme"
+  "homepage": "https://github.com/okmttdhr/aupa#readme",
+  "devDependencies": {
+    "reactuate": "^0.1.20"
+  }
 }
