--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "aupa",
   "version": "1.0.0",
-  "description": "",
+  "description": "aupa is ...",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node node_modules/reactuate/webpack-dev-server.js",
-    "build": "NODE_ENV=production webpack --config node_modules/reactuate/default-webpack-config.js --progress --colors"
+    "build": "NODE_ENV=production webpack --config node_modules/reactuate/default-webpack-config.js --progress --colors",
+    "eslint": "$(npm bin)/eslint"
   },
   "repository": {
     "type": "git",
@@ -19,6 +20,11 @@
   },
   "homepage": "https://github.com/okmttdhr/aupa#readme",
   "devDependencies": {
+    "eslint": "^2.9.0",
+    "eslint-config-airbnb": "^9.0.1",
+    "eslint-plugin-import": "^1.10.2",
+    "eslint-plugin-jsx-a11y": "^1.2.0",
+    "eslint-plugin-react": "^5.2.2",
     "reactuate": "^0.1.20"
   }
 }
