--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node node_modules/reactuate/webpack-dev-server.js",
-    "build": "NODE_ENV=production webpack --config node_modules/reactuate/default-webpack-config.js --progress --colors",
+    "start": "node webpack-dev-server.js",
+    "build": "NODE_ENV=production webpack --config default-webpack-config.js --progress --colors",
     "eslint": "$(npm bin)/eslint"
   },
   "repository": {
@@ -27,5 +27,9 @@
     "eslint-plugin-jsx-a11y": "^1.2.0",
     "eslint-plugin-react": "^5.2.2",
     "reactuate": "^0.1.20"
+  },
+  "dependencies": {
+    "bluebird": "^3.4.1",
+    "superagent": "^2.0.0"
   }
 }
